# sisa_ai

./: 00_START_HERE.md  API_EXAMPLES.md  DEPLOYMENT.md  EXAMPLE_REPORT.md  PROJECT_FILES.md  QUICKSTART.md  README.md  TESTING.md  build.bat  build.sh  render.yaml  requirements.txt  start_backend.bat  start_backend.sh  start_frontend.bat  start_frontend.sh
backend/: .env  __init__.py  app.py  config.py  pyproject.toml  requirements.txt
backend/models/: __init__.py  schemas.py
backend/modules/: __init__.py  ai_insights.py  detection_engine.py  log_analyzer.py  policy_engine.py  risk_engine.py
frontend/: index.html
frontend/static/css/: style.css
frontend/static/js/: app.js
