[tool.poetry]
name = "sisa-ai"
version = "1.0.0"
description = "AI Secure Data Intelligence Platform"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.109.0"
uvicorn = {version = "0.27.0", extras = ["standard"]}
pydantic = "2.5.0"
python-dotenv = "1.0.0"
python-multipart = "0.0.6"
openai = "1.3.0"
requests = "2.31.0"
gunicorn = "21.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
